--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="https://placehold.co/400" class="d-block w-100 max-height-60" alt="second hero item">
         </div>
         <div class="carousel-item">
-          <img src="https://placehold.co/400" class="d-block w-100 max-height-60" alt="thrid hero item">
+          <img src="https://placehold.co/400" class="d-block w-100 max-height-60" alt="third hero item">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
