--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
         </div>
       </div>
     </div>
+    <footer>
+      <h2 class="text-center">Footer</h2>
+      <ul class="d-flex justify-content-evenly list-unstyled margin-top">
+        <a href=""><li>Lorem, ipsum.</li></a>
+        <a href=""><li>Lorem, ipsum.</li></a>
+        <a href=""><li>Lorem, ipsum.</li></a>
+      </ul>
+    </footer>
   </body>
   <script src="js/script.js"></script>
   <!-- Bootstrap JS with Popper Separated. -->
