updated website colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-color">
     <div id="NavBar" class="sticky-top mb-1">
       <a href="">Link 1</a>
       <a href="">Link 2</a>
@@ -21,7 +21,7 @@
     </div>
     <div
       id="hero-carousel"
-      class="carousel slide w-100 max-height-60"
+      class="border-color carousel slide w-100 max-height-60"
       data-bs-ride="carousel"
     >
       <div class="carousel-inner">
@@ -85,7 +85,6 @@
             exercitationem ut provident
           </p>
         </div>
-
         <div class="col">
           <img
             src="https://placehold.co/400"
